--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 .App {
   text-align: center;
+}
+
+h1 {
+  font-family: "Roboto", sans-serif;
 }
